// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formats case "list1" 1`] = `
"- This is a list item.

::container
- This is a list item.
::
"
`;

exports[`formats case "list2" 1`] = `
"- This is a list item.
  ::container
  - This is a list item.
  ::
"
`;

exports[`formats case "list4" 1`] = `
"::parent
- This is a list item.

  :::container
  - This is a list item.
  :::
::
"
`;

exports[`formats case "list5" 1`] = `
"- This is a list item.
  ::container
  - This is a list item.
  ::
"
`;

exports[`formats case "list6" 1`] = `
"::parent
- This is a list item.
  :::container
  - This is a list item.
  :::
::
"
`;

exports[`formats case "list7" 1`] = `
"- This is a list item.
  ::container
  - This is a list item.
  ::
"
`;

exports[`formats case "list8" 1`] = `
"::page-section
---
background-image:
  url: https://images.example.com/dog.png
color: red
---
- This is a list item.2

  :::container
  :::
::
"
`;

exports[`formats case "list10" 1`] = `
"---

## title: ""
description: ""

## This section contains a bunch of lists

- This is a list item.
- This is a list item.
  - This is a CHILD list item.
    - This is a GRANDCHILD list item.
- This is a list item.

::page-section
---
background-image:
  url: https://images.example.com/dog.png
color: red
---
- This is a list item.
- This is a list item.
  - This is a CHILD list item.
    - This is a GRANDCHILD list item.
- This is a list item.

  :::container
  - This is a list item.
  - This is a list item.
  - This is a CHILD list item.
    - This is a GRANDCHILD list item.
  - This is a list item.
  :::

  :::container
  - This is a list item.
  - This is a list item.
    - This is a CHILD list item.
      - This is a GRANDCHILD list item.
  - This is a list item.
  :button[This is nested another level]
  ::::container
  ---
  background-image:
    url: https://images.example.com/dog.png
  color: red
  ---
  - This is a list item.
  - This is a list item.
    - This is a CHILD list item.
      - This is a GRANDCHILD list item.
  - This is a list item.
  This content is below the list.
  ::::
  :icon{name="mdi:github"}
  More outer content.
  :::
::
"
`;

exports[`formats case "list11" 1`] = `
"::page-container
---
simple-array:
  - item1
  - item2
  - item3
---
::

::page-container
---
items:
  - name: Item 1
    description: First item
  - name: Item 2
    description: Second item
---
::

::page-container
---
attributes:
  - domains:
      - internal
  - env:
      - dev
      - staging
      - prod
  - dogs:
      - husky
      - beagle
---
::
"
`;

exports[`formats case "list12" 1`] = `
"::page-section
- This is a list item.

  :::container
  - This is a list item.
  :::
::
"
`;

exports[`formats case "nested1" 1`] = `
"::container
---
background-color: "#eee"
padding: 20px
---
# This is a header
:icon{color="#000" name="mdi:github" size="36px"}
:::content2
Well
:::
::
"
`;

exports[`formats case "nested2" 1`] = `
"::container
---
bi:
  url: https://example.com
  bg: contain
styles: |
  p {
    color: red;
  }
---
::
"
`;
